--- a/about.qmd
+++ b/about.qmd
@@ -1,14 +1,9 @@
 ---
 title: "About Me"
 ---
+I am a sociology major with minors in public health and statistics. I am pursuing a career in social research and data analysis. I am interested in researching areas of social justice, such as senior issues, LGBTQ+ issues, and criminal justice reform. My hobbies include film, writing, hiking, and playing with my cat Miso Soup.
 
-This is where you get to write about yourself.
+![Picture of Miso Soup](https://raw.githubusercontent.com/anguswithee/anguswithee.github.io/refs/heads/main/docs/IMG_1641.jpeg)
 
-If your favorite color is purple you might show a graph that uses purple.
-
-```{r}
-#| echo: false
-set.seed(123)
-hist(rnorm(10000), col = "purple", main = "Purple Histogram", xlab = "")
 ```
 
