--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ Sociology Major
 
 Appalachian State University
 
-![Picture of Me](https://raw.githubusercontent.com/anguswithee/anguswithee.github.io/refs/heads/main/docs/IMG_1434.jpeg)
+![Picture of Me](https://github.com/anguswithee/anguswithee.github.io/blob/main/unnamed.jpg?raw=true)
 
 
 
