--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Angus Withee"
 ---
 
-Sociology Major
+Sociology Major, Applied Research Methods Concentration
 
 Appalachian State University
 
